# quiz_manager

./: .gitignore  Dockerfile  README.md  compose.yaml  mongo-init.js  pyproject.toml  quiz_manager_coverage.txt
.github/workflows/: github-actions.yml
quiz_manager/: app.py  settings.py  types.py
src/quiz_manager/: app.py  settings.py  types.py
tests/: test_quiz_manager.py
