[tool.poetry]
name = "quiz_manager"
version = "0.1.0"
description = ""
authors = ["helena2505 <elenakarelina833@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
